# sigser

./: Cargo.toml  README.md
ser/: Cargo.toml  README.md
ser/src/: lib.rs  sighashtype.rs  sigser.rs
sighashtest/: Cargo.toml  sighash.json
sighashtest/src/: lib.rs
